--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,9 @@ edition = "2021"
 name = "backdrop"
 
 [dependencies]
-lazy_static = "1.4.0"
+lazy_static = { version = "1.4.0", optional = true }
 tokio = { version = "1.25.0", features = ["sync", "rt", "full"], optional = true}
 
 [features]
-std = []
+std = ["lazy_static"]
 default = ["std", "tokio"]
