update Cargo.toml for publishing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,13 @@
 name = "backdrop"
 version = "0.1.0"
 edition = "2021"
+license = "MIT"
+authors = [ "Qqwy / Marten"]
+description = "Drop your large or complex objects in the background with Backdrop! (later, on another thread, or both! Fully customizable! Tokio supported!)"
+keywords = ["alloc", "drop", "cache", "box", "tokio", "thread", "async"]
+categories = ["no-std", "drop", "memory-management"]
+readme = "README.md"
+repository = "https://github.com/qqwy/rust-backdrop"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
