--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 license = "MIT"
 authors = [ "Qqwy / Marten"]
 description = "Drop your large or complex objects in the background with Backdrop! (later, on another thread, or both! Fully customizable! Tokio supported!)"
-categories = ["alloc", "drop", "cache", "box", "tokio", "thread", "async"]
+categories = ["alloc", "drop", "cache", "tokio", "thread"]
 keywords = ["alloc", "no_std", "drop", "memory-management"]
 readme = "README.md"
 repository = "https://github.com/qqwy/rust-backdrop"
