--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,8 @@ edition = "2021"
 license = "MIT"
 authors = [ "Qqwy / Marten"]
 description = "Drop your large or complex objects in the background with Backdrop! (later, on another thread, or both! Fully customizable! Tokio supported!)"
-categories = ["alloc", "drop", "cache", "tokio", "thread"]
-keywords = ["alloc", "no_std", "drop", "memory-management"]
+categories = ["memory-management", "no-std", "no_std::no_alloc", "asynchronous", "data-structures"]
+keywords = ["alloc", "no_std", "drop", "tokio"]
 readme = "README.md"
 repository = "https://github.com/qqwy/rust-backdrop"
 
