--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,19 +1,16 @@
 [package]
 name = "backdrop"
-version = "0.1.1"
+version = "0.1.2"
 edition = "2021"
 license = "MIT"
 authors = [ "Qqwy / Marten"]
 description = "Drop your large or complex objects in the background with Backdrop! (later, on another thread, or both! Fully customizable! Tokio supported!)"
-categories = ["memory-management", "no-std", "no_std::no_alloc", "asynchronous", "data-structures"]
+categories = ["memory-management", "no-std", "no-std::no-alloc", "asynchronous", "data-structures"]
 keywords = ["alloc", "no_std", "drop", "tokio"]
 readme = "README.md"
 repository = "https://github.com/qqwy/rust-backdrop"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[lib]
-name = "backdrop"
 
 [dependencies]
 lazy_static = { version = "1.4.0", optional = true }
@@ -23,3 +20,6 @@ tokio = { version = "1.25.0", features = ["sync", "rt", "full"], optional = true
 std = ["lazy_static", "alloc"]
 alloc = []
 default = ["std", "tokio"]
+
+[package.metadata.docs.rs]
+features = ["std", "tokio"]
