Make sure doc feature does not block building on stable

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,9 +20,10 @@ tokio = { version = "1.25.0", features = ["sync", "rt", "full"], optional = true
 std = ["lazy_static", "alloc"]
 alloc = []
 default = ["std"]
+doc = ["std", "tokio"] # <- Not for end users; Only used to enable nightly-only feature doc_auto_cfg when building documentation
 
 [package.metadata.docs.rs]
-features = ["std", "tokio"]
+features = ["doc"]
 
 [[example]]
 name = "comparison"
