--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,13 +13,15 @@ repository = "https://github.com/qqwy/rust-backdrop"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bytecheck = { version = "0.7.0", optional = true, default-features = false }
 lazy_static = { version = "1.4.0", optional = true }
+rkyv = { version = "0.7.40", optional = true }
 tokio = { version = "1.25.0", features = ["sync", "rt", "full"], optional = true}
 
 [features]
 std = ["lazy_static", "alloc"]
 alloc = []
-default = ["std"]
+default = ["std", "rkyv"]
 doc = ["std", "tokio"] # <- Not for end users; Only used to enable nightly-only feature doc_auto_cfg when building documentation
 
 [package.metadata.docs.rs]
