--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ tokio = { version = "1.25.0", features = ["sync", "rt", "full"], optional = true
 [features]
 std = ["lazy_static", "alloc"]
 alloc = []
-default = ["std", "rkyv"]
+default = ["std", "rkyv", "bytecheck"]
 doc = ["std", "tokio"] # <- Not for end users; Only used to enable nightly-only feature doc_auto_cfg when building documentation
 
 [package.metadata.docs.rs]
