--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,13 +15,13 @@ repository = "https://github.com/qqwy/rust-backdrop"
 [dependencies]
 bytecheck = { version = "0.7.0", optional = true, default-features = false }
 lazy_static = { version = "1.4.0", optional = true }
-rkyv = { version = "0.7.40", optional = true }
+rkyv = { version = "0.7.40", optional = true, default-features = false }
 tokio = { version = "1.25.0", features = ["sync", "rt", "full"], optional = true}
 
 [features]
 std = ["lazy_static", "alloc"]
 alloc = []
-default = ["std", "rkyv", "bytecheck"]
+default = ["std"]
 doc = ["std", "tokio"] # <- Not for end users; Only used to enable nightly-only feature doc_auto_cfg when building documentation
 
 [package.metadata.docs.rs]
